# pebble-kia

./: CLAUDE.md  DESIGN.md  IDEAS.md  README.md
pebble/: package-lock.json  package.json  wscript
pebble/src/c/: app_state.c  app_state.h  demo_data.c  demo_data.h  ipc.c  ipc.h  main.c  ui_detail.c  ui_detail.h  ui_main.c  ui_main.h  units.c  units.h
pebble/src/pkjs/: config.js  index.js
proxy/: .env.example  Caddyfile.example  Dockerfile  README.md  demo-data.json  docker-compose.yml  pyproject.toml
proxy/app/: auth.py  cache.py  config.py  detector.py  main.py  models.py  notifier.py
proxy/app/sources/: base.py  demo.py  live.py
proxy/scenarios/: pv5-ac-charge.json  pv5-daily-drive.json  pv5-preconditioning.json  pv5-rapid-charge.json
