[project]
name = "pebble-kia-proxy"
version = "0.1.0"
description = "Self-hosted proxy wrapping the Kia Connect API for the Pebble watchapp and other clients"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
]

[tool.uv]
package = false
